package com.rickensteven.sirkwie.gui.graphstream;

public class GraphNodeData
{
    public final String name;
    public final String type;

    public GraphNodeData(String name, String type)
    {
        this.name = name;
        this.type = type;
    }
}
