@startuml

package graphstream {
    class GraphNodeData {
        +name: String
        +type: String

        +GraphNodeData(name: String, type: String)
    }

    class GraphNodeDrawingVisitor implements INodeVisitor {
        +getValue(): GraphNodeData
        +visit(node: Probe)
        +visit(node: Input)
        +visit(node: AndGate)
        +visit(node: NAndGate)
        +visit(node: NOrGate)
        +visit(node: OrGate)
        +visit(node: XOrGate)
    }
    GraphNodeDrawingVisitor --> "1" GraphNodeData : -value

    class GraphstreamSimulationView extends AbstractSimulationView {
        -graph: MultiGraph

        +GraphstreamSimulationView(controller: Controller, viewModel: ViewModel)
        #setupUi()
        #update(circuit: Circuit)
        #draw(circuit: Circuit)
        -drawNodes(circuit: Circuit, addToGraph: boolean)
        -drawEdges(circuit: Circuit)
        -getStyleSheet(): String
    }
    GraphNodeSimulationView --> "1" GraphNodeDrawingVisitor : -visitor
}

@enduml